[tool.poetry]
name = "enphase-exporter"
version = "0.0.0"  # DO NOT CHANGE -- set during build
description = "Poll the Enphase Envoy and provide it to Prometheus."
authors = ["Paul Lockaby <paul@paullockaby.com>"]
packages = [{include = "enphase_exporter", from = "src"}]

[tool.poetry.scripts]
enphase_exporter = "enphase_exporter:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"
prometheus-client = "^0.16.0"
tenacity = "^8.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pre-commit = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
